--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,7 @@ stages:
   - template: azure/stages.yml@templates
     parameters:
       nightly_coverage: true
+      minrust: false
 
 resources:
   repositories:
