--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,10 @@ stages:
 #              setup: ${{ parameters.setup }}
 #              all_features: ${{ parameters.check_all_features }}
   - stage: cargo_nightly_test
-    displayName: Test suite (nightly)
+    displayName: Test suite nightly
     dependsOn: cargo_nightly_check
     jobs:
-      - template: azure/tests.yml@templates
+      - template: azure/test.yml@templates
         parameters:
           envs: {}
           setup: []
@@ -36,6 +36,8 @@ stages:
           single_threaded: false
           nightly_feature: ''
           features: ''
+          rust: nightly
+          cross: true
 #  - stage: ${{ format('{0}style', parameters.prefix) }}
 #    ${{ if ne(parameters.prefix, '') }}:
 #      displayName: ${{ format('Style linting ({0})', parameters.prefix) }}
